# anolib

./: .gitignore  .gitmodules  CMakeLists.txt
inc/: constants.hpp  main.h
python/: algo_dsp_filters.py  algo_dsp_functions.py  algo_dsp_wavetables.py  hope_dsp_filters.py  inpt_wp_inputs.py  notes.md  test_dsp_amplitude.py  test_dsp_filters.py  test_dsp_filters_wp.py  test_dsp_functions.py  test_sample.py  util_functions.py  util_plotting.py  util_wave_files.py  util_waveforms.py
python/notebooks/: 01-Notes.md  ParabolicSine.ipynb  Plot_FFT.ipynb  Wavetable-Sawtooth.ipynb  exp-BLEP.ipynb  exp-Wavetables.ipynb
src/: main.cpp
tests/: TestTests.cpp
